Refactor FlyingSaucerRenderer to make it run on JDK 8 instead of JDK 10